--- a/Developing Machine Learning Pipelines/Driver Accident Risk Model.ipynb
+++ b/Developing Machine Learning Pipelines/Driver Accident Risk Model.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Loading"
+    "## 4. Data Loading"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Analysis"
+    "## 5. Exploratory Analysis"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Aggregation"
+    "## 6. Data Aggregation"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Cleaning"
+    "## 7. Data Cleaning"
    ]
   },
   {
@@ -275,6 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Encoding missing values as -1 shifts the distribution, we encode them as nan for imputing them later\n",
     "data = data.replace(-1, np.nan)"
    ]
   },
@@ -331,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering"
+    "## 8. Feature Engineering"
    ]
   },
   {
@@ -378,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split Training, Validation and Test"
+    "## 9. Split Training, Validation and Test"
    ]
   },
   {
@@ -397,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imputation"
+    "## 10. Imputation"
    ]
   },
   {
@@ -418,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelling"
+    "## 11. Modelling"
    ]
   },
   {
@@ -530,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performance Evaluation"
+    "## 12. Performance Evaluation"
    ]
   },
   {
