Update Driver Accident Risk Model.ipynb

--- a/Developing Machine Learning Pipelines/Driver Accident Risk Model.ipynb
+++ b/Developing Machine Learning Pipelines/Driver Accident Risk Model.ipynb
@@ -2076,7 +2076,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Logistic Regression Model\n",
+    "# Random Forest Model\n",
     "model = se.RandomForestClassifier()\n",
     "\n",
     "# Hyperparameters\n",
